--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 # .appveyor.yml
 version: 1.0.{build}
 
-image: macos-monterey
+image: macos-ventura
 # 构建脚本
 build_script:
   - echo "Starting build on macOS Ventura..."
