--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 # .appveyor.yml
 version: 1.0.{build}
 
-image: macos-ventura
+image: macos-bigsur
 build_script:
   - echo "Starting build on macOS Ventura..."
   - echo "Running sw_vers to get macOS version:"
